# bazel

./: .bazelrc  BUILD.bazel  WORKSPACE  common.package.json  package.json  readme.md  task.md  tsconfig.json
cli/: BUILD.bazel  console.ts  index.ts  util.ts  yargswrapper.ts
components/: BUILD.bazel  index.tsx
components/common/header/: index.tsx
components/common/logo/: index.tsx
components/primitive/text/: index.tsx
context/: BUILD.bazel  index.ts
context/hocs/: withAuth.tsx
docs/: BUILD.bazel  next.config.js
docs/pages/: index.tsx
docs/src/components/common/header/: index.tsx
libs/api-service/: BUILD.bazel  index.ts
libs/auth/: BUILD.bazel
tools/nginx/static/: nginx.conf
tools/nodejs/: BUILD.bazel
