package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "cli",
    srcs = glob(["**/*.ts"]),
    module_name = "@mono/cli",
    deps = [
        "@npm//@types/yargs",
        "@npm//yargs",
        "@npm//lodash.get",
        "@npm//@types/node",
        "@npm//untildify",
    ],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "bin",
    data = [
        ":cli"
    ],
    entry_point = ":index.ts",
)
