package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "components",
    srcs = glob(["**/*.tsx"]),
    module_name = "@mono/components",
    deps = [
        "@npm//react",
        "@npm//@types/react",
        "@npm//react-dom"
    ],
)
