package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "context",
    srcs = glob(["**/*.tsx"]) + glob(["**/*.ts"]),
    module_name = "@mono/context",
    deps = [
        "//libs/api-service:api-service-ts",
        "@npm//react",
        "@npm//@types/react",
        "@npm//react-dom",
        "@npm//next",
        "@npm//@types/next",
        "@npm//lodash.get",
        "@npm//@types/lodash.get"
    ],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "bin",
    data = [":context"],
    entry_point = ":index.ts"
)


