package(default_visibility = ["//visibility:public"])

EXCLUDE_PATTERNS = [
    ".next/**",
    "out/**",
]

load("//tools:next_site.bzl", "next_site")

next_site(
    name = "docs",
    srcs = glob(
        ["**/*.*"],
        exclude = EXCLUDE_PATTERNS,
    ),
    data = [
        "//:package.json",
        "//:tsconfig.json",
        "//components",
        "//context",
        "//libs/api-service",
        "@npm//@zeit/next-typescript",
        "@npm//tsconfig-paths-webpack-plugin",
        "@npm//umd-compat-loader",
    ],
    port = 3001,
    site_path = "docs",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "image",
    base = "//tools/nginx/static",
    directory = "/usr/share/nginx/html",
    tars = [":docs_pkg"],
)

