package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "api-service",
    srcs = glob(["**/*.ts"]),
    module_name = "@mono/libs/api-service",
    deps = [
        "@npm//apisauce",
        "@npm//axios",
        "@npm//lodash.get",
        "@npm//@types/lodash.get"
    ],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "bin",
    data = [":api-service"],
    entry_point = ":index.ts"
)



