package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "auth-ts",
    srcs = glob(["**/*.ts"]),
    module_name = "@mono/libs/auth",
    deps = [
        "@npm//axios"
    ],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "auth",
    data = [":auth-ts"],
    entry_point = ":index.ts"
)

